--- a/src/Pim/Bundle/CatalogBundle/Resources/config/form_types.yml
+++ b/src/Pim/Bundle/CatalogBundle/Resources/config/form_types.yml
@@ -31,6 +31,7 @@ services:
         arguments:
             - '@pim_catalog.manager.product'
             - '@oro_flexibleentity.value_form.value_subscriber'
+            - '@pim_catalog.form.type.product.view'
         tags:
             - { name: form.type, alias: pim_product_value }
 
