PIM-1597 Display a very dummy Product Grid to access product form

--- a/src/Pim/Bundle/CatalogBundle/Resources/config/doctrine/ProductAssociation.orm.yml
+++ b/src/Pim/Bundle/CatalogBundle/Resources/config/doctrine/ProductAssociation.orm.yml
@@ -8,9 +8,9 @@ Pim\Bundle\CatalogBundle\Entity\ProductAssociation:
             id: true
             generator:
                 strategy: AUTO
-        productOwnerId:
+        ownerId:
             type: integer
-            column: product_owner_id
+            column: owner_id
     manyToOne:
         association:
             targetEntity: Pim\Bundle\CatalogBundle\Entity\Association
