--- a/src/Pim/Bundle/CatalogBundle/Resources/config/model/doctrine/Product.orm.yml
+++ b/src/Pim/Bundle/CatalogBundle/Resources/config/model/doctrine/Product.orm.yml
@@ -53,3 +53,12 @@ Pim\Bundle\CatalogBundle\Model\Product:
                     category_id:
                         referencedColumnName: id
                         onDelete: CASCADE
+    oneToMany:
+        values:
+            targetEntity: Pim\Bundle\CatalogBundle\Model\ProductValue
+            mappedBy: entity
+            cascade:
+                - remove
+                - persist
+                - refresh
+
